<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2008 Google Inc.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/options_view"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/display_options"
      android:focusable="true"
      android:textSize="20sp"
      android:gravity="center"
    />

    <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

      <RadioButton android:id="@+id/normal_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_cards" />

      <RadioButton android:id="@+id/big_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/big_cards" />

    </RadioGroup>


    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:gravity="center"
      android:layout_height="wrap_content">
      <CheckBox android:id="@+id/display_cards_playable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/display_cards_playable" />
     <CheckBox android:id="@+id/auto_knock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/auto_knock" />        
    </LinearLayout>

    <!-- LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:gravity="center"
      android:layout_height="wrap_content">
      <CheckBox android:id="@+id/auto_knock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/auto_knock" />
    </LinearLayout-->
    
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/play_speed"
      android:focusable="true"
      android:textSize="16sp"
      android:gravity="center"
    />
    
     <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

      <RadioButton android:id="@+id/play_fast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_fast" />

      <RadioButton android:id="@+id/play_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_medium" />
        
     <RadioButton android:id="@+id/play_slow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_slow" />        

    </RadioGroup> 
    
     <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:gravity="center"
      android:layout_height="wrap_content">
      <CheckBox android:id="@+id/play_sounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/play_sounds" />
    </LinearLayout>      
 
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:gravity="center"
      android:layout_height="wrap_content">
      <Button android:id="@+id/button_accept"
        android:text="@string/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
      <Button android:id="@+id/button_cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </LinearLayout>
  </LinearLayout>
</ScrollView>
    

