<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2008 Google Inc.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
  
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/stats_view"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/text_title"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/sevens_layout_text_text"
      android:focusable="true"
      android:textSize="20sp"
      android:gravity="center"
    />
    
  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:stretchColumns="*"> 
      <TableRow> 
              <TextView   
                  android:layout_column="2"  
                  android:id="@+id/text_ThisRoundHeader"
                  android:text="@string/score_text"
                  android:textSize="20sp"
                  android:gravity="center"
               /> 
               <TextView  
                 android:layout_column="3"  
                  android:id="@+id/text_TotalHeader"
                  android:text="@string/total_text"
                  android:textSize="20sp"
                  android:gravity="center"
               	/> 
        </TableRow>     
       <TableRow> 
              <TextView   
                  android:layout_column="1"  
                  android:id="@+id/text_player1"
                  android:text="@string/sevens_layout_text_text"
                  android:textSize="20sp"
                  android:gravity="left"
                  android:textColor="#ffff00"
               /> 
               <TextView  
                android:layout_column="2"
                android:id="@+id/text_player1_score"         
               	android:text="@string/sevens_layout_text_text"
               	android:textSize="20sp"
               	android:gravity="center"
               	android:textColor="#ffff00"
               	/> 
               <TextView  
                android:layout_column="3"
                android:id="@+id/text_player1_total"         
               	android:text="@string/sevens_layout_text_text"
               	android:textSize="20sp"
               	android:gravity="center"
               	android:textColor="#ffff00"
               	/>               	
        </TableRow> 
       <TableRow> 
              <TextView   
                  android:layout_column="1"  
                  android:id="@+id/text_player2"
                  android:text="@string/sevens_layout_text_text"
                  android:textSize="20sp"
                  android:gravity="left"
               /> 
               <TextView  
                android:layout_column="2"
                android:id="@+id/text_player2_score"         
               	android:text="@string/sevens_layout_text_text"
               	android:textSize="20sp"
               	android:gravity="center"
               	/> 
               <TextView  
                android:layout_column="3"
                android:id="@+id/text_player2_total"         
               	android:text="@string/sevens_layout_text_text"
               	android:textSize="20sp"
               	android:gravity="center"
               	/>               	
        </TableRow> 
       <TableRow> 
              <TextView   
                  android:layout_column="1"  
                  android:id="@+id/text_player3"
                  android:text="@string/sevens_layout_text_text"
                  android:textSize="20sp"
                  android:gravity="left"
               /> 
               <TextView  
                android:layout_column="2"
                android:id="@+id/text_player3_score"         
               	android:text="@string/sevens_layout_text_text"
               	android:textSize="20sp"
               	android:gravity="center"
               	/> 
               <TextView  
                android:layout_column="3"
                android:id="@+id/text_player3_total"         
               	android:text="@string/sevens_layout_text_text"
               	android:textSize="20sp"
               	android:gravity="center"
               	/>               	
        </TableRow>                 
         <TableRow> 
              <TextView   
                  android:layout_column="1"  
                  android:id="@+id/text_player4"
                  android:text="@string/sevens_layout_text_text"
                  android:textSize="20sp"
                  android:gravity="left"
               /> 
               <TextView  
                android:layout_column="2"
                android:id="@+id/text_player4_score"         
               	android:text="@string/sevens_layout_text_text"
               	android:textSize="20sp"
               	android:gravity="center"
               	/> 
               <TextView  
                android:layout_column="3"
                android:id="@+id/text_player4_total"         
               	android:text="@string/sevens_layout_text_text"
               	android:textSize="20sp"
               	android:gravity="center"
               	/>               	
        </TableRow> 
 	</TableLayout>
    

    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:gravity="center"
      android:layout_height="wrap_content">
      <Button android:id="@+id/button_accept"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
 

    </LinearLayout>
  </LinearLayout>
</ScrollView>
    

